[package]
name = "bittorrent-client-rust"
version = "0.1.0"
authors = ["Ivan Lazarević"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.11.5"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
serde_json = "1.0.105"
serde_repr = "0.1.19"
sha1 = "0.10.1"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
urlencoding = "2.1.3"
